Modification du fichier jenkisfile